# TfT_Ditto

./: README.md  ditto.yaml  manual.md  pyproject.toml  uv.toml
.claude/: settings.local.json
.claude/agent-memory/conductor-bot/: MEMORY.md  project_ditto.md  project_phase6.md
ProjectSpecs/: architecture.md  instructions.md  roadmap.md
ditto/: __init__.py  cli.py  example_model.py  graph_builder.py  inference.py  inference_engine.py  main.py  models.py  parser.py  requirements.txt  visualizer.py
ditto.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
ditto/static/: app.js  index.html  style.css
tests/: test_graph_builder.py  test_inference_engine.py  test_parser.py  test_visualizer.py
tests/fixtures/: ditto_example.py  linear_regression.py  simple_model.py  srs_example.py  srs_example2.py
